correction méthodes + TUs